--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -16,6 +16,7 @@
                 <span class="logo-subtitle">// COMMUNITY BUILT</span>
             </div>
             <div class="nav-menu">
+                <a href="#bounties" class="nav-link">BOUNTIES</a>
                 <a href="#projects" class="nav-link">PROJECTS</a>
                 <a href="#community" class="nav-link">COMMUNITY</a>
                 <a href="#about" class="nav-link">ABOUT</a>
@@ -69,6 +70,235 @@
                         <span class="stat-label">Commits</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Bounties Section -->
+    <section id="bounties" class="bounties">
+        <div class="section-container">
+            <h2 class="section-title">
+                <span class="title-line">//</span>
+                BOUNTY BOARD
+                <span class="title-line">//</span>
+            </h2>
+            <div class="bounties-header">
+                <div class="bounties-filters">
+                    <button class="filter-btn active" data-filter="all">ALL</button>
+                    <button class="filter-btn" data-filter="development">DEVELOPMENT</button>
+                    <button class="filter-btn" data-filter="design">DESIGN</button>
+                    <button class="filter-btn" data-filter="marketing">MARKETING</button>
+                    <button class="filter-btn" data-filter="bug">BUG FIX</button>
+                </div>
+                <div class="bounties-sort">
+                    <select class="sort-select">
+                        <option value="reward">Highest Reward</option>
+                        <option value="newest">Newest First</option>
+                        <option value="urgent">Most Urgent</option>
+                    </select>
+                </div>
+            </div>
+            <div class="bounties-grid">
+                <div class="bounty-card" data-category="development">
+                    <div class="bounty-header">
+                        <div class="bounty-project">
+                            <span class="project-name">NeuroLink AI</span>
+                            <span class="bounty-urgency urgent">URGENT</span>
+                        </div>
+                        <div class="bounty-reward">
+                            <span class="reward-amount">$500</span>
+                            <span class="reward-type">USD</span>
+                        </div>
+                    </div>
+                    <h3 class="bounty-title">Implement WebSocket Real-time Data Sync</h3>
+                    <p class="bounty-description">Need to implement WebSocket connection for real-time data synchronization between neural interface and cloud backend.</p>
+                    <div class="bounty-tags">
+                        <span class="bounty-tag">WebSocket</span>
+                        <span class="bounty-tag">Node.js</span>
+                        <span class="bounty-tag">Real-time</span>
+                    </div>
+                    <div class="bounty-footer">
+                        <div class="bounty-stats">
+                            <span class="stat-item">
+                                <span class="stat-icon">👤</span>
+                                <span>3 applicants</span>
+                            </span>
+                            <span class="stat-item">
+                                <span class="stat-icon">⏰</span>
+                                <span>2 days left</span>
+                            </span>
+                        </div>
+                        <button class="bounty-claim-btn">CLAIM BOUNTY</button>
+                    </div>
+                </div>
+
+                <div class="bounty-card" data-category="bug">
+                    <div class="bounty-header">
+                        <div class="bounty-project">
+                            <span class="project-name">CyberVault</span>
+                            <span class="bounty-urgency high">HIGH</span>
+                        </div>
+                        <div class="bounty-reward">
+                            <span class="reward-amount">300</span>
+                            <span class="reward-type">POINTS</span>
+                        </div>
+                    </div>
+                    <h3 class="bounty-title">Fix Memory Leak in Encryption Module</h3>
+                    <p class="bounty-description">Critical memory leak occurring in the AES-256 encryption module during batch processing operations.</p>
+                    <div class="bounty-tags">
+                        <span class="bounty-tag">C++</span>
+                        <span class="bounty-tag">Memory Management</span>
+                        <span class="bounty-tag">Security</span>
+                    </div>
+                    <div class="bounty-footer">
+                        <div class="bounty-stats">
+                            <span class="stat-item">
+                                <span class="stat-icon">👤</span>
+                                <span>5 applicants</span>
+                            </span>
+                            <span class="stat-item">
+                                <span class="stat-icon">⏰</span>
+                                <span>1 day left</span>
+                            </span>
+                        </div>
+                        <button class="bounty-claim-btn">CLAIM BOUNTY</button>
+                    </div>
+                </div>
+
+                <div class="bounty-card" data-category="design">
+                    <div class="bounty-header">
+                        <div class="bounty-project">
+                            <span class="project-name">QuantumOS</span>
+                            <span class="bounty-urgency medium">MEDIUM</span>
+                        </div>
+                        <div class="bounty-reward">
+                            <span class="reward-amount">$250</span>
+                            <span class="reward-type">USD</span>
+                        </div>
+                    </div>
+                    <h3 class="bounty-title">Design New Dashboard UI Components</h3>
+                    <p class="bounty-description">Create cyberpunk-themed UI components for the quantum computing dashboard including charts and data visualizations.</p>
+                    <div class="bounty-tags">
+                        <span class="bounty-tag">Figma</span>
+                        <span class="bounty-tag">UI/UX</span>
+                        <span class="bounty-tag">Dashboard</span>
+                    </div>
+                    <div class="bounty-footer">
+                        <div class="bounty-stats">
+                            <span class="stat-item">
+                                <span class="stat-icon">👤</span>
+                                <span>8 applicants</span>
+                            </span>
+                            <span class="stat-item">
+                                <span class="stat-icon">⏰</span>
+                                <span>5 days left</span>
+                            </span>
+                        </div>
+                        <button class="bounty-claim-btn">CLAIM BOUNTY</button>
+                    </div>
+                </div>
+
+                <div class="bounty-card" data-category="marketing">
+                    <div class="bounty-header">
+                        <div class="bounty-project">
+                            <span class="project-name">DataMesh</span>
+                            <span class="bounty-urgency low">LOW</span>
+                        </div>
+                        <div class="bounty-reward">
+                            <span class="reward-amount">150</span>
+                            <span class="reward-type">POINTS</span>
+                        </div>
+                    </div>
+                    <h3 class="bounty-title">Create Twitter Thread on Launch</h3>
+                    <p class="bounty-description">Write and publish an engaging Twitter thread about our DataMesh v2.0 launch highlighting key features and benefits.</p>
+                    <div class="bounty-tags">
+                        <span class="bounty-tag">Twitter</span>
+                        <span class="bounty-tag">Content</span>
+                        <span class="bounty-tag">Social Media</span>
+                    </div>
+                    <div class="bounty-footer">
+                        <div class="bounty-stats">
+                            <span class="stat-item">
+                                <span class="stat-icon">👤</span>
+                                <span>12 applicants</span>
+                            </span>
+                            <span class="stat-item">
+                                <span class="stat-icon">⏰</span>
+                                <span>7 days left</span>
+                            </span>
+                        </div>
+                        <button class="bounty-claim-btn">CLAIM BOUNTY</button>
+                    </div>
+                </div>
+
+                <div class="bounty-card" data-category="development">
+                    <div class="bounty-header">
+                        <div class="bounty-project">
+                            <span class="project-name">NeonDB</span>
+                            <span class="bounty-urgency high">HIGH</span>
+                        </div>
+                        <div class="bounty-reward">
+                            <span class="reward-amount">$750</span>
+                            <span class="reward-type">USD</span>
+                        </div>
+                    </div>
+                    <h3 class="bounty-title">Optimize Database Query Performance</h3>
+                    <p class="bounty-description">Optimize complex JOIN queries in PostgreSQL that are causing performance bottlenecks in production environment.</p>
+                    <div class="bounty-tags">
+                        <span class="bounty-tag">PostgreSQL</span>
+                        <span class="bounty-tag">Performance</span>
+                        <span class="bounty-tag">Database</span>
+                    </div>
+                    <div class="bounty-footer">
+                        <div class="bounty-stats">
+                            <span class="stat-item">
+                                <span class="stat-icon">👤</span>
+                                <span>2 applicants</span>
+                            </span>
+                            <span class="stat-item">
+                                <span class="stat-icon">⏰</span>
+                                <span>3 days left</span>
+                            </span>
+                        </div>
+                        <button class="bounty-claim-btn">CLAIM BOUNTY</button>
+                    </div>
+                </div>
+
+                <div class="bounty-card" data-category="development">
+                    <div class="bounty-header">
+                        <div class="bounty-project">
+                            <span class="project-name">SynthWave</span>
+                            <span class="bounty-urgency medium">MEDIUM</span>
+                        </div>
+                        <div class="bounty-reward">
+                            <span class="reward-amount">500</span>
+                            <span class="reward-type">POINTS</span>
+                        </div>
+                    </div>
+                    <h3 class="bounty-title">Integrate Spotify API for Music Streaming</h3>
+                    <p class="bounty-description">Implement Spotify Web API integration to enable music streaming and playlist management in our synthwave player.</p>
+                    <div class="bounty-tags">
+                        <span class="bounty-tag">API Integration</span>
+                        <span class="bounty-tag">JavaScript</span>
+                        <span class="bounty-tag">Spotify</span>
+                    </div>
+                    <div class="bounty-footer">
+                        <div class="bounty-stats">
+                            <span class="stat-item">
+                                <span class="stat-icon">👤</span>
+                                <span>6 applicants</span>
+                            </span>
+                            <span class="stat-item">
+                                <span class="stat-icon">⏰</span>
+                                <span>4 days left</span>
+                            </span>
+                        </div>
+                        <button class="bounty-claim-btn">CLAIM BOUNTY</button>
+                    </div>
+                </div>
+            </div>
+            <div class="bounties-footer">
+                <button class="btn-secondary large">VIEW ALL BOUNTIES</button>
             </div>
         </div>
     </section>
@@ -198,7 +428,7 @@
                     <div class="step-number">01</div>
                     <div class="step-content">
                         <h3>CREATE OR JOIN</h3>
-                        <p>Start your own revolutionary project or join an existing one that matches your passion</p>
+                        <p>Start your own revolutionary open-source project or contribute to an existing one that matches your passion</p>
                         <div class="step-glow"></div>
                     </div>
                 </div>
@@ -206,15 +436,15 @@
                     <div class="step-number">02</div>
                     <div class="step-content">
                         <h3>BUILD TOGETHER</h3>
-                        <p>Collaborate with talented developers from around the world using cutting-edge tools</p>
+                        <p>Contribute to a project, get community points, and earn equity</p>
                         <div class="step-glow"></div>
                     </div>
                 </div>
                 <div class="community-step">
                     <div class="step-number">03</div>
                     <div class="step-content">
-                        <h3>LAUNCH & SCALE</h3>
-                        <p>Deploy your community-built startup and watch it change the world</p>
+                        <h3>BECOME A FOUNDER</h3>
+                        <p>Join a project's founding team and make a start-up, or join Legyn's coveated core team as a member</p>
                         <div class="step-glow"></div>
                     </div>
                 </div>
