why join section

--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -415,6 +415,74 @@
         </div>
     </section>
 
+    <!-- Why Join Section -->
+    <section id="why-join" class="why-join">
+        <div class="section-container">
+            <h2 class="section-title">
+                <span class="title-line">//</span>
+                WHY JOIN LEGYN
+                <span class="title-line">//</span>
+            </h2>
+            <div class="why-join-content">
+                <div class="why-join-intro">
+                    <p class="intro-text">
+                        LEGYN was created for the <span class="highlight-text">hungry</span>, the <span class="highlight-text">lost</span>,
+                        the ones that just want to <span class="highlight-text">create</span> or just do things for the
+                        <span class="highlight-text">hell of it</span>!
+                    </p>
+                </div>
+                <div class="why-join-grid">
+                    <div class="why-card">
+                        <div class="why-icon-wrapper">
+                            <div class="why-icon-text">01</div>
+                        </div>
+                        <h3>Turn Ideas Into Reality</h3>
+                        <p>Transform your wildest concepts into working products - whether you're building the next unicorn startup or just coding for the pure thrill of creation</p>
+                    </div>
+                    <div class="why-card">
+                        <div class="why-icon-wrapper">
+                            <div class="why-icon-text">02</div>
+                        </div>
+                        <h3>Find Your Tribe</h3>
+                        <p>Connect with fellow dreamers, builders, and rebels who share your passion and will help bring your vision to life</p>
+                    </div>
+                    <div class="why-card">
+                        <div class="why-icon-wrapper">
+                            <div class="why-icon-text">03</div>
+                        </div>
+                        <h3>No Boundaries</h3>
+                        <p>Your dream product doesn't need to fit in a box - build for profit, for fun, or just because you can</p>
+                    </div>
+                    <div class="why-card">
+                        <div class="why-icon-wrapper">
+                            <div class="why-icon-text">04</div>
+                        </div>
+                        <h3>Community Power</h3>
+                        <p>Leverage collective skills and resources - let the community help make that dream product of yours a reality</p>
+                    </div>
+                    <div class="why-card">
+                        <div class="why-icon-wrapper">
+                            <div class="why-icon-text">05</div>
+                        </div>
+                        <h3>Earn While You Build</h3>
+                        <p>Contribute to projects, earn points and equity - your passion becomes your pathway to ownership</p>
+                    </div>
+                    <div class="why-card">
+                        <div class="why-icon-wrapper">
+                            <div class="why-icon-text">06</div>
+                        </div>
+                        <h3>Launch Together</h3>
+                        <p>Turn open-source projects into startups with a ready-made team of passionate co-founders</p>
+                    </div>
+                </div>
+                <div class="why-join-cta">
+                    <p class="cta-text">Let the community help make that dream product of yours a reality</p>
+                    <button class="btn-primary large pulse">JOIN THE REVOLUTION</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Community Section -->
     <section id="community" class="community">
         <div class="section-container">
