--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -17,7 +17,7 @@
             </div>
             <div class="nav-menu">
                 <a href="#bounties" class="nav-link">BOUNTIES</a>
-                <a href="#projects" class="nav-link">PROJECTS</a>
+                <a href="projects.html" class="nav-link">PROJECTS</a>
                 <a href="#community" class="nav-link">COMMUNITY</a>
                 <a href="#about" class="nav-link">ABOUT</a>
                 <button class="nav-button">JOIN NOW</button>
