--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -74,6 +74,57 @@
         </div>
     </section>
 
+    <!-- Our Purpose Section -->
+    <section id="purpose" class="purpose-section">
+        <div class="section-container">
+            <h2 class="section-title">
+                <span class="title-line">//</span>
+                OUR PURPOSE
+                <span class="title-line">//</span>
+            </h2>
+
+            <div class="purpose-cards">
+                <!-- Card 1: Built for Dreamers -->
+                <div class="purpose-card">
+                    <div class="card-number">01</div>
+                    <h3 class="card-title">Built for Dreamers</h3>
+                    <p class="card-description">
+                        For the desperate, the hungry, the thrill-seekers. We're leveling the playing field.
+                        Be part of something bigger than yourself and bring your idea to life.
+                    </p>
+                    <div class="card-glow"></div>
+                </div>
+
+                <!-- Card 2: Fearless & Transparent -->
+                <div class="purpose-card">
+                    <div class="card-number">02</div>
+                    <h3 class="card-title">Fearless & Transparent</h3>
+                    <p class="card-description">
+                        We build in public because we're not cowards. Bold transparency beats fearful hiding.
+                    </p>
+                    <div class="card-glow"></div>
+                </div>
+
+                <!-- Card 3: Community Over Competition -->
+                <div class="purpose-card">
+                    <div class="card-number">03</div>
+                    <h3 class="card-title">Community Over Competition</h3>
+                    <p class="card-description">
+                        We celebrate each other's growth. When everyone wins, we all win bigger.
+                    </p>
+                    <div class="card-glow"></div>
+                </div>
+            </div>
+
+            <div class="purpose-cta">
+                <button class="btn-primary mission-btn" onclick="viewMissionStatement()">
+                    <span>VIEW MISSION STATEMENT</span>
+                    <div class="btn-glow"></div>
+                </button>
+            </div>
+        </div>
+    </section>
+
     <!-- Bounties Section -->
     <section id="bounties" class="bounties">
         <div class="section-container">
