--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -12,8 +12,10 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-text">LEGYN</span>
-                <span class="logo-subtitle">// COMMUNITY BUILT</span>
+                <a href="cyberpunk-landing.html" style="text-decoration: none;">
+                    <span class="logo-text">LEGYN</span>
+                    <span class="logo-subtitle">// COMMUNITY BUILT</span>
+                </a>
             </div>
             <div class="nav-menu">
                 <a href="#bounties" class="nav-link">BOUNTIES</a>
