--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -562,7 +562,7 @@
                     <div class="step-number">02</div>
                     <div class="step-content">
                         <h3>BUILD TOGETHER</h3>
-                        <p>Tackle bounties, contribute to the community, and get rewarded—from points to USDC to potentially even equity in the projects you help build.</p>
+                        <p>Tackle bounties, contribute to the community, and get rewarded—from points to USDC to potentially equity in the projects you help build.</p>
                         <div class="step-glow"></div>
                     </div>
                 </div>
