--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -107,7 +107,7 @@
                     <div class="card-number">02</div>
                     <h3 class="card-title">Discipline & Momentum</h3>
                     <p class="card-description">
-                        Ever given up on a project? Struggling with productivity? We've got you covered, rebuild yourself to be the best version of yourself 
+                        Ever given up on a project? Struggling with productivity? Looking for a change? Rebuild here; be the best version of yourself.
                     </p>
                     <div class="card-glow"></div>
                 </div>
@@ -509,7 +509,7 @@
                             <div class="why-icon-text">03</div>
                         </div>
                         <h3>Discipline</h3>
-                        <p>Ever given up on a project? Struggling with productivity? We've got you covered, rebuild yourself to be the best version of yourself</p>
+                        <p>Ever given up on a project? Struggling with productivity? We've got you covered, rebuild and become the best version of yourself</p>
                     </div>
                     <div class="why-card">
                         <div class="why-icon-wrapper">
