--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -554,7 +554,7 @@
                     <div class="step-number">01</div>
                     <div class="step-content">
                         <h3>CREATE OR JOIN</h3>
-                        <p>Start your own revolutionary open-source project or contribute to an existing one that matches your passion</p>
+                        <p>Join the community, create your own open-source project or contribute to an existing one that matches your passion</p>
                         <div class="step-glow"></div>
                     </div>
                 </div>
