--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -554,7 +554,7 @@
                     <div class="step-number">01</div>
                     <div class="step-content">
                         <h3>CREATE OR JOIN</h3>
-                        <p>Join the community, create your own open-source project or contribute to an existing one that matches your passion</p>
+                        <p>Join the community, create your own open-source project, or contribute to an existing one that matches your passion</p>
                         <div class="step-glow"></div>
                     </div>
                 </div>
@@ -562,7 +562,7 @@
                     <div class="step-number">02</div>
                     <div class="step-content">
                         <h3>BUILD TOGETHER</h3>
-                        <p>Tackle bounties, contribute to the community, and get rewarded—from points to USDC to potentially equity in the projects you help build.</p>
+                        <p>Tackle bounties, contribute to the community, and get rewarded—from points to USDC to potential equity in the projects you help build.</p>
                         <div class="step-glow"></div>
                     </div>
                 </div>
