--- a/legyn-app/cyberpunk-landing.html
+++ b/legyn-app/cyberpunk-landing.html
@@ -107,7 +107,7 @@
                     <div class="card-number">02</div>
                     <h3 class="card-title">Discipline & Momentum</h3>
                     <p class="card-description">
-                        Ever given up on a project? Struggling with productivity? Looking for a change? Rebuild here; be the best version of yourself.
+                        Ever given up on a project? Struggling with productivity? Looking for a change? Rebuild it here; be the best version of yourself.
                     </p>
                     <div class="card-glow"></div>
                 </div>
@@ -373,19 +373,19 @@
                 <div class="project-card">
                     <div class="card-header">
                         <div class="card-status active"></div>
-                        <div class="card-type">STARTUP</div>
+                        <div class="card-type">Events Curator</div>
                     </div>
-                    <h3 class="card-title">NeuroLink AI</h3>
-                    <p class="card-description">Revolutionary brain-computer interface for seamless human-AI collaboration</p>
+                    <h3 class="card-title">Beeda</h3>
+                    <p class="card-description">The private network for founders building $100B+ companies in India</p>
                     <div class="card-tech">
-                        <span>Python</span>
-                        <span>TensorFlow</span>
-                        <span>React</span>
+                        <span>Network</span>
+                        <span>Investors</span>
+                        <span>Founders</span>
                     </div>
                     <div class="card-stats">
                         <div class="stat-item">
                             <span class="stat-icon">⭐</span>
-                            <span>2.4k</span>
+                            <span>12</span>
                         </div>
                         <div class="stat-item">
                             <span class="stat-icon">👥</span>
@@ -509,7 +509,7 @@
                             <div class="why-icon-text">03</div>
                         </div>
                         <h3>Discipline</h3>
-                        <p>Ever given up on a project? Struggling with productivity? We've got you covered, rebuild and become the best version of yourself</p>
+                        <p>Ever given up on a project? Struggling with productivity? We've got you covered, rebuild and become the best version of yourself here</p>
                     </div>
                     <div class="why-card">
                         <div class="why-icon-wrapper">
@@ -530,7 +530,7 @@
                             <div class="why-icon-text">06</div>
                         </div>
                         <h3>Fearless & Transparent</h3>
-                        <p>We build in public because we're not cowards. Bold transparency beats fearful hiding.</p>
+                        <p>We build in public because we're not cowards. Bold transparency beats fearful hiding</p>
                     </div>
                 </div>
                 <div class="why-join-cta">
