--- a/legyn-app/mission-statement.html
+++ b/legyn-app/mission-statement.html
@@ -192,7 +192,7 @@
 <body>
     <div class="mission-page-container">
         <div class="mission-page-content">
-            <a href="cyberpunk-landing.html" class="mission-page-close">×</a>
+            <a href="/" class="mission-page-close">×</a>
             
             <h1 class="mission-page-title">
                 <span class="title-line">//</span>
@@ -271,7 +271,7 @@
                     </button>
                 </div>
                 
-                <a href="cyberpunk-landing.html" class="mission-page-back">
+                <a href="/" class="mission-page-back">
                     ← Back to Home
                 </a>
             </div>
