--- a/legyn-app/projects.html
+++ b/legyn-app/projects.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="cyberpunk-landing.html" style="text-decoration: none;">
+                <a href="/" style="text-decoration: none;">
                     <span class="logo-text">LEGYN</span>
                     <span class="logo-subtitle">// COMMUNITY BUILT</span>
                 </a>
@@ -21,8 +21,8 @@
             <div class="nav-menu">
                 <a href="#bounties" class="nav-link">BOUNTIES</a>
                 <a href="projects.html" class="nav-link active">PROJECTS</a>
-                <a href="cyberpunk-landing.html#community" class="nav-link">COMMUNITY</a>
-                <a href="cyberpunk-landing.html#about" class="nav-link">ABOUT</a>
+                <a href="/#community" class="nav-link">COMMUNITY</a>
+                <a href="/#about" class="nav-link">ABOUT</a>
                 <button class="nav-button">JOIN NOW</button>
             </div>
             <div class="hamburger">
@@ -729,7 +729,7 @@
                         <h4>Platform</h4>
                         <a href="projects.html">Projects</a>
                         <a href="bounties.html">Bounties</a>
-                        <a href="cyberpunk-landing.html#community">Community</a>
+                        <a href="/#community">Community</a>
                     </div>
                     <div class="link-group">
                         <h4>Company</h4>
