--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LEGYN - Community Built Startups</title>
+    <title>LEGYN - Community Built</title>
     <link rel="stylesheet" href="legyn-app/cyberpunk-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -94,7 +94,7 @@
                 <!-- Card 1: Built for Dreamers -->
                 <div class="purpose-card">
                     <div class="card-number">01</div>
-                    <h3 class="card-title">Network, Talent, & Experience</h3>
+                    <h3 class="card-title">Community & Experience</h3>
                     <p class="card-description">
                         You've got the vision. We've got the connects. From Idea to Launch, we're the unfair advantage you've been missing.
                         
@@ -107,7 +107,7 @@
                     <div class="card-number">02</div>
                     <h3 class="card-title">Discipline & Momentum</h3>
                     <p class="card-description">
-                        Ever given up on a project? Struggling with productivity? Looking for a change? Rebuild it here; be the best version of yourself.
+                        Ever given up on a project? Struggling with productivity? Looking for a change? Rebuild it here; become the best version of yourself.
                     </p>
                     <div class="card-glow"></div>
                 </div>
@@ -398,14 +398,14 @@
                 <div class="project-card">
                     <div class="card-header">
                         <div class="card-status recruiting"></div>
-                        <div class="card-type">OPEN</div>
+                        <div class="card-type">APP</div>
                     </div>
-                    <h3 class="card-title">CyberVault</h3>
-                    <p class="card-description">Next-gen decentralized storage platform with quantum encryption</p>
+                    <h3 class="card-title">Localbuddy</h3>
+                    <p class="card-description">Stop being a tourist, make local friends, and travel with true immersion</p>
                     <div class="card-tech">
-                        <span>Rust</span>
-                        <span>Blockchain</span>
-                        <span>WebGL</span>
+                        <span>Travel</span>
+                        <span>Culture</span>
+                        <span>Social</span>
                     </div>
                     <div class="card-stats">
                         <div class="stat-item">
